# DesignPattern

./: .gitignore  CMakeLists.txt  README.md
01.SimpleFactory/: 01.SimpleFactory.md
01.SimpleFactory/2.Code/: CMakeLists.txt  Makefile  SimpleFactory.h  main.cpp
02.FactoryMethod/: 02.FactoryMethod.md
02.FactoryMethod/1.Picture/: ~$$工厂方法模式.~vsdx
02.FactoryMethod/2.Code/: CMakeLists.txt  FactoryMethod.h  main.cpp
03.AbstractFactory/: 03.AbstractFactory.md
03.AbstractFactory/2.Code/: AbstractFactory.h  CMakeLists.txt  main.cpp
04.BuilderPattern/: 04.BuilderPattern.md
04.BuilderPattern/2.Code/: BuilderPattern.h  CMakeLists.txt  main.cpp
05.PrototypePattern/: 05.PrototypePattern.md
05.PrototypePattern/2.Code/: CMakeLists.txt  PrototypePattern.h  main.cpp
06.Singleton/: 06.Singleton.md
06.Singleton/2.Code/: CMakeLists.txt  main.cpp
06.Singleton/2.Code/Singleton/: Makefile  Singleton.h  main.cpp
07.AdapterPattern/: Adapter.md
07.AdapterPattern/2.Code/: AdapterPattern.h  CMakeLists.txt  main.cpp
08.BridgePattern/: BridgePattern.md
08.BridgePattern/2.Code/: BridgePattern.h  CMakeLists.txt  main.cpp
09.CompositePattern/: CompositePattern.md
09.CompositePattern/2.Code/: CMakeLists.txt  CompositePattern.h  main.cpp
1.SimpleFactory/1.Picture/: 简单工厂模式.vsdx
1.SimpleFactory/2.Code/SimpleFactoryPattern/: SimpleFactoryPattern.sln
1.SimpleFactory/2.Code/SimpleFactoryPattern/Debug/: SimpleFactoryPattern.ilk
1.SimpleFactory/2.Code/SimpleFactoryPattern/SimpleFactoryPattern/: SimpleFactory.h  SimpleFactoryPattern.vcxproj  SimpleFactoryPattern.vcxproj.filters  main.cpp
1.SimpleFactory/2.Code/SimpleFactoryPattern/SimpleFactoryPattern/Debug/: vc120.idb
1.SimpleFactory/2.Code/SimpleFactoryPattern/SimpleFactoryPattern/Debug/SimpleFa.35201E6A.tlog/: CL.read.1.tlog  CL.write.1.tlog  SimpleFactoryPattern.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
10.DecoratorPattern/: DecoratorPattern.md
10.DecoratorPattern/2.Code/: CMakeLists.txt  DecoratorPattern.h  main.cpp
11.FacadePattern/: FacadePattern.md
11.FacadePattern/2.Code/: CMakeLists.txt  FacadePattern.h  main.cpp
12.FlyweightPattern/: FlyweightPattern.md
12.FlyweightPattern/2.Code/: CMakeLists.txt  FlyweightPattern.h  main.cpp
13.ProxyPattern/: ProxyPattern.md
13.ProxyPattern/2.Code/: CMakeLists.txt  ProxyPattern.h  main.cpp
14.ChainOfResponsibility/: ChainOfResponsibility.md
14.ChainOfResponsibility/2.Code/: CMakeLists.txt  ChainOfResponsibility.h  main.cpp
15.CommandPattern/: CommandPattern.md
15.CommandPattern/2.Code/: CMakeLists.txt  CommandPattern.h  main.cpp
16.InterpreterPattern/: InterpreterPattern.md
16.InterpreterPattern/2.Code/: CMakeLists.txt  InterpreterPattern.h  main.cpp
17.IteratorPattern/: 17.IteratorPattern.md
17.IteratorPattern/2.Code/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Iterator.h  main.cpp
18.MediatorPattern/: 18.MediatorPattern.md
18.MediatorPattern/2.Code/: CMakeLists.txt  Colleague.h  Landlord.cpp  Mediator.h  Tenant.cpp  common.h  main.cpp
19.MementoPattern/: 19.MementoPattern.md
19.MementoPattern/2.Code/: CMakeLists.txt  CodeManager.h  Memento.h  Originator.h  main.cpp
19.MementoPattern/2.Code/MementoPattern/: MementoPattern.sln
19.MementoPattern/2.Code/MementoPattern/Debug/: MementoPattern.ilk
19.MementoPattern/2.Code/MementoPattern/MementoPattern/: CodeManager.h  MementoPattern.vcxproj  MementoPattern.vcxproj.filters  Originator.cpp  demo.h  main.cpp
19.MementoPattern/2.Code/MementoPattern/MementoPattern/Debug/: vc120.idb
19.MementoPattern/2.Code/MementoPattern/MementoPattern/Debug/MementoPattern.tlog/: CL.read.1.tlog  CL.write.1.tlog  MementoPattern.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2.FactoryMethod/2.Code/: main.cpp
20.ObserverPattern/: 20.ObserverPattern.md
20.ObserverPattern/2.Code/: AllyCenter.cpp  AllyCenter.h  CMakeLists.txt  Demo.h  Observer.h  common.h  main.cpp
21.StatePattern/: 21.StatePattern.md
21.StatePattern/2.Code/: CMakeLists.txt  Demo.h  GameAccount.cpp  GameAccount.h  GameAccout.cpp  Level.cpp  Level.h  main.cpp
22.StrategyPattern/: 22.StrategyPattern.md
22.StrategyPattern/2.Code/: CMakeLists.txt  Context.h  Strategy.h  main.cpp
23.TemplateMethodPattern/: 23.TemplateMethodPattern.md
23.TemplateMethodPattern/2.Code/: CMakeLists.txt  Demo.h  FingerprintModule.h  main.cpp
24.VisitorPattern/: 24.VisitorPattern.md
24.VisitorPattern/2.Code/: CMakeLists.txt  Demo.h  Element.cpp  Element.h  ShoppingCart.h  Visitor.h  main.cpp  visitor.cpp
3.AbstractFactory/2.Code/: AbstractFactory.h  main.cpp
31.PImplPattern/02.Code/: demo.cpp  demo.h
32.谈谈低耦合原则/02.Code/: rightcode.cpp  wrongcode.cpp
6.Singleton/2.Code/: main.cpp
6.Singleton/2.Code/Singleton/: Singleton.h
6.SingletonPattern/1.Picture/: 单例模式.vsdx
7.AdapterPattern/2.Code/: AdapterPattern.h
8.BridgePattern/2.Code/: BridgePattern.h  main.cpp
9.CompositePattern/2.Code/: main.cpp
