cmake_minimum_required(VERSION 3.15)
project(cplusplus_design_pattern)

set(OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin/)
message(STATUS "output dir : ${OUTPUT_DIR}")

add_subdirectory(01.SimpleFactory/2.Code/)
add_subdirectory(02.FactoryMethod/2.Code/)
add_subdirectory(03.AbstractFactory/2.Code/)
add_subdirectory(04.BuilderPattern/2.Code/)
add_subdirectory(05.PrototypePattern/2.Code/)
add_subdirectory(06.Singleton/2.Code/)
add_subdirectory(07.AdapterPattern/2.Code/)
add_subdirectory(08.BridgePattern/2.Code/)
add_subdirectory(09.CompositePattern/2.Code/)
add_subdirectory(10.DecoratorPattern/2.Code/)
add_subdirectory(11.FacadePattern/2.Code/)
add_subdirectory(12.FlyweightPattern/2.Code/)
add_subdirectory(13.ProxyPattern/2.Code/)
add_subdirectory(14.ChainOfResponsibility/2.Code/)
add_subdirectory(15.CommandPattern/2.Code/)
add_subdirectory(16.InterpreterPattern/2.Code/)
add_subdirectory(17.IteratorPattern/2.Code/)
add_subdirectory(18.MediatorPattern/2.Code/)
add_subdirectory(19.MementoPattern/2.Code/)
add_subdirectory(20.ObserverPattern/2.Code/)
add_subdirectory(21.StatePattern/2.Code/)
add_subdirectory(22.StrategyPattern/2.Code/)
add_subdirectory(23.TemplateMethodPattern/2.Code/)
add_subdirectory(24.VisitorPattern/2.Code/)
